# digit-recognition

./: .gitignore  .gitpod.yml  README.md  main.py  pyproject.toml
.github/: standards.yml
dataset/: __main__.py  circles.py  generate.py  rectangles.py
model/: __main__.py  network.py  train.py
