[tool.poetry]
name = "square-circle-ai"
version = "0.1.0"
description = "Implementing Rosenblatt's perceptron algorithm for distinguishing circle vs square images in pure python. (Educational Purposes only)"
authors = ["GrandMoff100 <minecraftcrusher100@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.isort]
profile = "black"

[tool.pylint.master]
ignore = [
    "LICENSE",
    "README.md",
    ".github",
    "pyproject.toml"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
